# llm-security-evals

./: .gitignore  README.md  pyproject.toml
data/prompts/: sample_attacks.json
docs/: methodology.md  observations.md  research-question.md  threat-model.md
src/llm_security_evals/: __init__.py  detectors.py  experiment.py  leakage.py  loader.py  model.py  runner.py  scorer.py
tests/: __init__.py  test_detectors.py  test_leakage.py  test_loader.py  test_placeholder.py  test_runner.py
